# wifi-hotspot-billing

./: .gitignore  Cargo.toml  README.md
backend/: .env.example  Cargo.toml
backend/src/: config.rs  error.rs  main.rs  models.rs  utils.rs
backend/src/api/: admin.rs  auth.rs  mod.rs  package.rs  payment.rs  quota.rs  user.rs
backend/src/db/: schema.rs
backend/src/radius/: attributes.rs  mod.rs  packet.rs  server.rs
