[package]
name = "wifi-billing-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
leptos = { version = "0.6", features = ["ssr"] }
leptos_axum = "0.6"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.5"
governor = "0.10"
once_cell = "1.19"
regex = "1.10"
validator = { version = "0.16", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
